Functional data binding

--- a/index.html
+++ b/index.html
@@ -126,7 +126,7 @@
         
         <!-- Footer with a close button -->
         <div class="footer">
-             <button onclick="webui.close()">Close Window</button>
+             <button onclick="closeWin()">Close Window</button>
         </div>
     </div>
 
